--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Feedback Form</h1>
+    <form method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" required minlength="3" maxlength="50"> <br>
+        <label for="portfolio">Portfolio</label>
+        <input type="url" id="portfolio" required><br>
+        <label for="favcolor">Favorite Color</label>
+        <input type="color" name="favcolor" id="favcolor"><br>
+        <label for="likeness">Likeness</label>
+        <input type="range" name="likeness" id="likeness"><br>
+
+
+
+
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
