--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
         <input type="text" id="name" required minlength="3" maxlength="50"> <br>
         <label for="portfolio">Portfolio</label>
         <input type="url" id="portfolio" required><br>
-        <label for="favcolor">Favorite Color</label>
-        <input type="color" name="favcolor" id="favcolor"><br>
+        <label for="favColor">Favorite Color</label>
+        <input type="color" name="favColor" id="favColor"><br>
         <label for="likeness">Likeness</label>
         <input type="range" name="likeness" id="likeness"><br>
 
