--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <label for="favColor">Favorite Color</label>
         <input type="color" name="favColor" id="favColor"><br>
         <label for="likeness">Likeness</label>
-        <input type="range" name="likeness" id="likeness"><br>
+        <input type="range" name="likeness" id="likeness" min="1" max="100"><br>
 
 
 
